# copilot-openai-api

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml  ruff.toml  run.py
.github/workflows/: image.yaml
