[project]
name = "copilot-openai-api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Hanchin Hsieh", email = "me@yuchanns.xyz"},
]
dependencies = ["fastapi>=0.115.12", "httpx>=0.28.1", "aiofiles>=24.1.0", "uvicorn>=0.34.0", "watchfiles>=1.0.4"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "Apache"}

[tool.pdm.scripts]
dev = "python run.py --reload"
lint = "ruff check --fix ."
format = "ruff format ."

[tool.pdm]
distribution = false

[tool.pyright]
venvPath = "."
venv = ".venv"
reportMissingModuleSource = false

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]
